--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,4 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".activity_and_fragment_learning.SecondActivity">
 
+    <TextView
+        android:id="@+id/intentToMain"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:text="To MainActivity"
+        android:gravity="center"
+        android:background="#2196F3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
